<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nombre de la aplicación: CredencialTEC"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Interfaz Gráfica:"
        android:layout_margin="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:layout_margin="8dp"
        android:textSize="12sp"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dip"
            android:text="@string/computer_name_label" />
        <EditText
            android:id="@+id/computer_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/introduce_computer_name"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dip"
            android:text="@string/computer_ram_label" />
        <EditText
            android:id="@+id/computer_ram"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/introduce_computer_ram"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dip"
            android:text="@string/computer_processor_label" />
        <EditText
            android:id="@+id/computer_processor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/introduce_computer_processor"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            android:importantForAutofill="no" />
    </LinearLayout>
    <Button
        android:id="@+id/write_tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_to_tag_button_label" />
</LinearLayout>